# jsonMock

./: .gitignore  CMakeLists.txt  README.md  main.go  requestJsonSchema.json  requestResponseMap.json  responseJsonSchema.json
src/: CMakeLists.txt  JsonMock.go  JsonMock_test.go  main_test.go
